updata kafka directory